fix(schema-service): null-tolerant deterministic extended-property map (B1-5)
Codex 019e3270 REVISE absorb. extractObjects built the per-object
extended-property map with Map.copyOf, which rejects null values — a
single NULL sys.extended_properties.value (sql_variant is nullable)
would NPE the extraction and, via the non-fatal catch, collapse the
entire M1 object inventory to empty. Map.copyOf also gave no order
guarantee, so snapshot artifacts diffed noisily.

Replace with Collections.unmodifiableMap(new TreeMap<>(...)): key-sorted
(deterministic) and null-value tolerant. Test: null-valued extended
property reaches the map without NPE; multi-property map asserts sorted
key order. schema-service 157 (0 fail).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>